Add validation for new "security.xml.xenc.encryptEmptyElements" configuration property
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@29643 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
+++ b/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
@@ -1416,6 +1416,7 @@ security.xml.xenc.encryptEmptyElements.description = Whether content encryption 
 security.xml.xenc.encryptEmptyElements.clusterProperty = security.xml.xenc.encryptEmptyElements
 security.xml.xenc.encryptEmptyElements.systemProperty = com.l7tech.security.xml.encryptEmptyElements
 security.xml.xenc.encryptEmptyElements.default = true
+security.xml.xenc.encryptEmptyElements.validation.regex = ${regex.boolean}
 
 wsdmNotificationEnabled.description = Enable WSDM subscription notifications (true/false)
 wsdmNotificationEnabled.default = true
