Added more explicit description of the syntax of the PAM_FILTER parameter and 2 examples for single and multiple groups.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@29646 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/etc/appliance/authconfig/radius_ldap_setup.conf
+++ b/etc/appliance/authconfig/radius_ldap_setup.conf
@@ -268,11 +268,11 @@ NSS_IDLE_TIMELIMIT="600"
 # have been adopted to make nss_ldap use something different
 PAM_LOGIN_ATTR="uid"
 
-# PAM_FILTER variable specifies the group ID in numeraical form to which the user must be member
-# in order to be allowed to log in.
+# PAM_FILTER variable specifies the group ID in numerical form of the group the user must
+# belong in order to be allowed to log in.
 # It is relevant and mandatory only if the CFG_TYPE is "ldap_only".
-# For multiple groups, as an example, the following can be used:
-# "|(gidNumber=4000)(gidNumber=3000)"
+# Example for one group: "gidNumber=4000"
+# Example For multiple groups: "|(gidNumber=4000)(gidNumber=3000)"
 # Default: "empty"
 PAM_FILTER=""
 
