SSM-3588: label is now "Format Output"
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@29651 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/assertions/JsonTransformationAssertion/src/main/resources/com/l7tech/external/assertions/jsontransformation/console/JsonTransformationPropertiesDialog.properties
+++ b/modules/gateway/assertions/JsonTransformationAssertion/src/main/resources/com/l7tech/external/assertions/jsontransformation/console/JsonTransformationPropertiesDialog.properties
@@ -14,4 +14,4 @@ test.tab.title=Test
 convention.standard=Standard
 convention.jsonml=JSONML
 invalid.transformation.convention=Invalid transformation convention selected
-prettyPrint=Format Print Output:
+prettyPrint=Format Output:
