SSM-3580: fixed by no longer supporting invalid multi value variable referenced within the AttributeValue dialog. Progress on [1]. Added support for XML and mixed content in the AttributeValue element generated. Added test coverage for existing code and enhancements. [1] - http://sarek/mediawiki/index.php?title=SAML_Protocol_Attribute_Query#Attribute_Properties
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@29660 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/console/src/main/resources/com/l7tech/console/panels/saml/resources/EditAttributeDialog.properties
+++ b/modules/gateway/console/src/main/resources/com/l7tech/console/panels/saml/resources/EditAttributeDialog.properties
@@ -37,6 +37,7 @@ attributeValueField.label=Attribute Value:
 attributeValueField.mnemonic=V
 attributeValueField.tooltip=Enter the Attribute Value
 attributeValueField.error.empty=The Attribute Value is required and cannot be empty.
+attributeValueField.error.moreThanOneVariableReferenced=Only a single variable may be referenced when 'Repeat if Multivalued' is configured.
 attributeValueField.error.title=Warning
 
 okButton.label=OK
