SSM-3545: reword to suggested labels for Route via SSH2 assertion
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@29678 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/assertions/SshAssertion/src/main/resources/com/l7tech/external/assertions/ssh/console/SshRouteAssertionPropertiesPanel.properties
+++ b/modules/gateway/assertions/SshAssertion/src/main/resources/com/l7tech/external/assertions/ssh/console/SshRouteAssertionPropertiesPanel.properties
@@ -36,4 +36,4 @@ connectionSettingsLabel=Connection settings
 copySettingsLabel=Copy settings
 readTimeoutLabel=Read timeout:
 downloadContentTypeLabel=Content type:
-setPrivateKeyLabel=Set private key ...
+manageStoredPasswordsLabel=Manage Stored Passwords
