SSM-3583: fetch only new data for refresh log
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@29685 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/console/src/main/resources/com/l7tech/console/panels/LogViewer.properties
+++ b/modules/gateway/console/src/main/resources/com/l7tech/console/panels/LogViewer.properties
@@ -11,5 +11,6 @@ filter.label.text=Filter:
 tail.unit.label.text=line(s)
 refresh.button.text=Refresh
 close.button.text=Close
-auto.refresh.text=Auto-Refresh
+auto.refresh.text=[Auto-Refresh]
 cancel.button.text=Cancel
+last.update.text=Last Updated: {0} {1}
