--- a/modules/gateway/assertions/SshAssertion/ivy.xml
+++ b/modules/gateway/assertions/SshAssertion/ivy.xml
@@ -14,6 +14,7 @@
 	<dependencies>
         <dependency org="org.apache.mina" name="mina-core" rev="2.0.2" force="true" conf="core"/>
         <dependency org="org.apache.sshd" name="sshd-core" rev="0.6.0-l7p1" force="true" conf="core"/>
+        <dependency org="com.jcraft" name="jzlib" rev="1.1.0" force="true" conf="core"/>
         <dependency name="layer7-modular-assertions" rev="latest.integration"
                     conf="compile->compile;runtime->runtime;test->test"/>
                 
