SSG-5116: SSH Routing; 1) in GUI, move read timeout to connection section  2) use connection and read timeouts for SshParameters
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@29711 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/assertions/SshAssertion/src/main/resources/com/l7tech/external/assertions/ssh/console/SshRouteAssertionPropertiesPanel.properties
+++ b/modules/gateway/assertions/SshAssertion/src/main/resources/com/l7tech/external/assertions/ssh/console/SshRouteAssertionPropertiesPanel.properties
@@ -7,7 +7,7 @@ timeoutLabel=Connect timeout:
 usernameLabel=Username
 passwordLabel=Password
 requiresPassword=Requires Password
-timeoutSecondsLabel=seconds
+timeoutSecondsLabel=(seconds)
 portError=The port number must be a number between 1 and 65535, or a context variable. Default port is {0}.
 errorTitle=SSH Route Assertion Validation
 usernamePasswordLabel=Username/Password
@@ -19,7 +19,7 @@ wssprocessHeaderLabel=&Remove processed Security header from request before rout
 connectionLabel=Connection
 authLabel=Authentication
 sshKnownHostsLabel=SSH Public Key
-sshTimeoutLabel=SSH Timeout
+sshTimeoutLabel=timeout
 publicKeyError=There was an issue with the SSH Public Key input. {0}
 passwordEmptyError=Password authentication is enabled but no password has been selected
 privateKeyEmptyError=Private key authentication is enabled but no key has been selected
