--- a/modules/gateway/console/src/main/resources/com/l7tech/console/panels/LogViewer.properties
+++ b/modules/gateway/console/src/main/resources/com/l7tech/console/panels/LogViewer.properties
@@ -11,6 +11,8 @@ filter.label.text=Filter:
 tail.unit.label.text=line(s)
 refresh.button.text=Refresh
 close.button.text=Close
-auto.refresh.text=[Auto-Refresh]
+auto.refresh.text=Auto-Refresh
+auto.refresh.last.update.text=[Auto-Refresh]
 cancel.button.text=Cancel
 last.update.text=Last Updated: {0} {1}
+caution.label.text=Caution! Constraint may exclude some records
