Corrected the ownership info about the config file mentioned in a comment.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@29727 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/etc/appliance/authconfig/radius_ldap_setup.conf
+++ b/etc/appliance/authconfig/radius_ldap_setup.conf
@@ -4,7 +4,7 @@
 # This file must comply with these requirements:
 # - type: text (ASCII text)
 # - name: radius_ldap_setup.conf
-# - ownership: root
+# - ownership: ssgconfig
 # - permissions: 600
 
 # The above mentioned script must be called with this file full patha and name as the only argument:
