--- a/modules/gateway/server/src/main/resources/com/l7tech/server/resources/web.xml
+++ b/modules/gateway/server/src/main/resources/com/l7tech/server/resources/web.xml
@@ -19,6 +19,11 @@
         <filter-class>com.l7tech.server.log.HybridDiagnosticContextServletFilter</filter-class>
     </filter>
 
+    <filter>
+        <filter-name>audit-context-reset</filter-name>
+        <filter-class>com.l7tech.server.transport.http.AuditContextResetFilter</filter-class>
+    </filter>
+
     <!--
     Map all requests that would otherwise be 404s to the SOAP servlet, for
     transparency purposes
@@ -124,6 +129,11 @@
 
     <filter-mapping>
         <filter-name>diagnostic-context</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
+
+    <filter-mapping>
+        <filter-name>audit-context-reset</filter-name>
         <url-pattern>/*</url-pattern>
     </filter-mapping>
 
