SSM-3492: added configuration lookup to AdminLogin so that uuid max config can be accessed from Policy Manager.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@29737 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/server/ivy.xml
+++ b/modules/gateway/server/ivy.xml
@@ -36,6 +36,7 @@
         <dependency name="layer7-gateway-management" rev="latest.integration" conf="core"/>
         <dependency name="layer7-gateway-reporting" rev="latest.integration" conf="core"/>
         <dependency name="layer7-gateway-sca-common" rev="latest.integration" conf="core"/>
+        <dependency name="layer7-test" rev="latest.integration" conf="test"/>
 
         <!-- Dependencies -->
         <dependency org="com.l7tech.lib" name="layer7-sun-jaxws" rev="1.0" conf="core"/> <!-- should be before CXF in classpath -->
