SSG-5040: fixed by making validation of Web SSO rules configuration via a new check box. Default value for this new 'validateWebSsoRules' property is true to support backwards compatability of behavior for existing policies. Added a new Advice to set this property to false for new instances of this assertion. Added test coverage.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@29741 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/assertions/SamlpAssertion/src/main/resources/com/l7tech/external/assertions/samlpassertion/console/SamlpResponseBuilderPropertiesDialog.properties
+++ b/modules/gateway/assertions/SamlpAssertion/src/main/resources/com/l7tech/external/assertions/samlpassertion/console/SamlpResponseBuilderPropertiesDialog.properties
@@ -5,7 +5,7 @@ responseStatus.detail=Status Detail:
 
 samlVersionPanel.title=SAML Version & Signature
 samlVersionPanel.version=SAML Version:
-samlVersionPanel.signResponse=Sign Response:
+samlVersionPanel.signResponse=Sign Response
 
 responseAttributes.title=Response Attributes
 resposneAttributes.Id=ID:
@@ -20,3 +20,5 @@ responseElements.title=Response Elements
 responseElements.assertions=Assertion(s):
 responseElements.encryptedAssertions.2_0_only=EncryptedAssertion(s):
 responseElements.extensions.2_0_only=Extensions:
+validateWebSsoRules=Validate Web SSO Rules
+addIssuer=Add Issuer
