SSG-5085: Fixed by adding "Ping service" into "Granularity in enabling built in services", so "Ping service" can be enabled or disabled in a particular port rather than enabled on every port.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@29750 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/console/src/main/resources/com/l7tech/console/panels/SsgConnectorPropertiesDialog.properties
+++ b/modules/gateway/console/src/main/resources/com/l7tech/console/panels/SsgConnectorPropertiesDialog.properties
@@ -1,5 +1,6 @@
 
 builtin.service.PolicyDiscovery.label=Policy download service
+builtin.service.PING.label=Ping service
 builtin.service.STS.label=WS-Trust security token service
 builtin.service.CSRHandler.label=Certificate signing service
 builtin.service.PasswordChange.label=Password changing service
@@ -8,6 +9,7 @@ builtin.service.SNMPQuery.label=SNMP query service
 
 builtin.service.tooltip=<html>Built-in services include the following services:<br>"Policy download service", "WS-Trust security token service", "Certificate signing service",<br>"Password changing service", "WSDL download service", and/or "SNMP query service".</html>
 builtin.service.PolicyDiscovery.tooltip=Policy Discovery service; used by the SecureSpan XML VPN Client.
+builtin.service.PING.tooltip=Gateway Status and Ping service; accessed by Gateway operators using a web browser.
 builtin.service.STS.tooltip=<html>WS-Trust Security Token service; used by the SecureSpan XML VPN Client for<br>getting SAML assertions and establishing WS-SecureConversation sessions.</html>
 builtin.service.CSRHandler.tooltip=Certificate Signing (CA) service; used by the SecureSpan XML VPN Client.
 builtin.service.PasswordChange.tooltip=Internal User Password Changing service; used by the SecureSpan XML VPN Client.
