SSM-3584: Federated identity providers now allow trusted certificates to be used in other providers.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@29753 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/console/src/main/resources/com/l7tech/console/resources/FederatedIdentityProviderDialog.properties
+++ b/modules/gateway/console/src/main/resources/com/l7tech/console/resources/FederatedIdentityProviderDialog.properties
@@ -10,6 +10,7 @@
 new.provider.dialog.title=New Federated Identity Provider
 edit.provider.dialog.title=Edit Federated Identity Provider
 no.trusted.cert.warning.dialog.title=No Trusted Certificate(s) Selected!
+trusted-certificate-in-use-warning-dialog.title=Trusted Certificate(s) In Use
 
 #######
 # components
@@ -51,3 +52,5 @@ cert.find.error=Unable to find the trusted certifitcate from the server.
 
 messagePanel.noVirtualGroupMessage= Virtual Group not supported
 messagePanel.manualCertRequiredMessage= Every identity that you wish to authorize using X.509 credentials will need to have their certificate imported manually
+
+error-trusted-certificate-in-use = Some trusted certificates in this federated identity provider are already trusted by another identity provider.
