bug 11251: Further fixes.  Exposed the decryptionAlwaysSucceeds setting and a number of the more likely-to-be-customized xenc blacklist settings as cluster properties.   The complete shutdown of all decryption attempts when the blacklist is full can now be turned off without disabling the blacklist completely and is now off by default; however, this can currently be used to trigger an out-of-memory DoS instead, given the blacklist's current replacement policy.  Keys that have been on the blacklist for too long are now discarded even in the absence of any failed decryption attempts.  Fixed typo in log message.
The DecryptionFault dummy element is now property added to the document when decryption fails.

Finally introduced RandomUtil, to begin reducing the number of private static SecureRandom instances throughout the tree.  Switching more places to use this class should have the side effect of increasing performance substantially when using software crypto with FIPS mode enabled.

git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@29759 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
+++ b/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
@@ -1418,6 +1418,42 @@ security.xml.xenc.encryptEmptyElements.systemProperty = com.l7tech.security.xml.
 security.xml.xenc.encryptEmptyElements.default = true
 security.xml.xenc.encryptEmptyElements.validation.regex = ${regex.boolean}
 
+security.xml.xenc.decryptionAlwaysSucceeds.description = Whether attempts to decrypt XML must always appear to succeed, once the Gateway has gotten as far as obtaining the symmetric key and attempting to decrypt the CipherValue.  XML that cannot be decrypted will be replaced with a dummy element named "L7xenc:DecryptionFault" in the "http://layer7tech.com/ns/xenc/decryptionfault" namespace.  This makes it more difficult for an attacker to use the Gateway as a decryption oracle. (true/false; default=true)
+security.xml.xenc.decryptionAlwaysSucceeds.clusterProperty = security.xml.xenc.decryptionAlwaysSucceeds
+security.xml.xenc.decryptionAlwaysSucceeds.systemProperty = com.l7tech.security.xml.decryptionAlwaysSucceeds
+security.xml.xenc.decryptionAlwaysSucceeds.default = true
+security.xml.xenc.decryptionAlwaysSucceeds.validation.regex = ${regex.boolean}
+
+security.xml.xenc.blacklist.enabled.description = Whether symmetric keys that fail to successfully decrypt XML are blacklisted on this node for a period of time.  This makes it more difficult to use the Gateway as a decryption oracle. (true/false; default=true)
+security.xml.xenc.blacklist.enabled.clusterProperty = security.xml.xenc.blacklist.enabled
+security.xml.xenc.blacklist.enabled.systemProperty = com.l7tech.security.xml.xenc.decryptionKeyBlacklist.enabled
+security.xml.xenc.blacklist.enabled.default = true
+security.xml.xenc.blacklist.enabled.validation.regex = ${regex.boolean}
+
+security.xml.xenc.blacklist.failWhenFull.description = If true, all XML decryption attempts will immediately fail, should the decryption key blacklist become full.  (true/false; default=false)
+security.xml.xenc.blacklist.failWhenFull.clusterProperty = security.xml.xenc.blacklist.failWhenFull
+security.xml.xenc.blacklist.failWhenFull.systemProperty = com.l7tech.security.xml.xenc.decryptionKeyBlacklist.failWhenFull
+security.xml.xenc.blacklist.failWhenFull.default = false
+security.xml.xenc.blacklist.failWhenFull.validation.regex = ${regex.boolean}
+
+security.xml.xenc.blacklist.maxFailures.description = Maximum number of XML decryption attempts that may fail before a key is blacklisted on a node (integer; default=5)
+security.xml.xenc.blacklist.maxFailures.clusterProperty = security.xml.xenc.blacklist.maxFailures
+security.xml.xenc.blacklist.maxFailures.systemProperty = com.l7tech.security.xml.xenc.decryptionKeyBlacklist.maxFailures
+security.xml.xenc.blacklist.maxFailures.default = 5
+security.xml.xenc.blacklist.maxFailures.validation.type = integer
+
+security.xml.xenc.blacklist.capacity.description = Number of entries permitted in the decryption key blacklist (integer; default=50000)
+security.xml.xenc.blacklist.capacity.clusterProperty = security.xml.xenc.blacklist.capacity
+security.xml.xenc.blacklist.capacity.systemProperty = com.l7tech.security.xml.xenc.decryptionKeyBlacklist.capacity
+security.xml.xenc.blacklist.capacity.default = 50000
+security.xml.xenc.blacklist.capacity.validation.type = integer
+
+security.xml.xenc.blacklist.maxAgeSec.description = Minimum number of seconds a blacklisted key should remain on the blacklist.  Notwithstanding this setting, the blacklist is cleared when a node is restarted.  (timeunit; default=7d)
+security.xml.xenc.blacklist.maxAgeSec.clusterProperty = security.xml.xenc.blacklist.maxAgeSec
+security.xml.xenc.blacklist.maxAgeSec.systemProperty = com.l7tech.security.xml.xenc.decryptionKeyBlacklist.maxAgeSec
+security.xml.xenc.blacklist.maxAgeSec.default = 7d
+security.xml.xenc.blacklist.maxAgeSec.validation.type = timeUnit
+
 wsdmNotificationEnabled.description = Enable WSDM subscription notifications (true/false)
 wsdmNotificationEnabled.default = true
 wsdmNotificationEnabled.clusterProperty = wsdm.notification.enabled
