--- a/modules/gateway/assertions/SshAssertion/src/main/resources/com/l7tech/external/assertions/ssh/console/SshTransportAssertionPropertiesPanel.properties
+++ b/modules/gateway/assertions/SshAssertion/src/main/resources/com/l7tech/external/assertions/ssh/console/SshTransportAssertionPropertiesPanel.properties
@@ -3,5 +3,5 @@ scpLabel=SCP
 sftpLabel=SFTP
 enableLabel=Enable:
 hostPrivateKeyLabel=Host private key:
-setHostPrivateKeyLabel=Manage Stored Private Keys
+setHostPrivateKeyLabel=Manage Stored Passwords
 idleTimeoutInMinsLabel=Idle timeout (in minutes):
