Renamed security.xml.xenc.blacklist.maxAgeSec cluster property to security.xml.xenc.blacklist.maxAge, and com.l7tech.security.xml.xenc.decryptionKeyBlacklist.maxAgeSec system property to com.l7tech.security.xml.xenc.decryptionKeyBlacklist.maxAge (ie, removed the "Sec" suffix) since this value is now parsed as a timeUnit and may not necessarily be in seconds.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@29794 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
+++ b/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
@@ -1448,11 +1448,11 @@ security.xml.xenc.blacklist.capacity.systemProperty = com.l7tech.security.xml.xe
 security.xml.xenc.blacklist.capacity.default = 50000
 security.xml.xenc.blacklist.capacity.validation.type = integer
 
-security.xml.xenc.blacklist.maxAgeSec.description = Minimum number of seconds a blacklisted key should remain on the blacklist.  Notwithstanding this setting, the blacklist is cleared when a node is restarted.  (timeunit; default=7d)
-security.xml.xenc.blacklist.maxAgeSec.clusterProperty = security.xml.xenc.blacklist.maxAgeSec
-security.xml.xenc.blacklist.maxAgeSec.systemProperty = com.l7tech.security.xml.xenc.decryptionKeyBlacklist.maxAgeSec
-security.xml.xenc.blacklist.maxAgeSec.default = 7d
-security.xml.xenc.blacklist.maxAgeSec.validation.type = timeUnit
+security.xml.xenc.blacklist.maxAge.description = Minimum time a blacklisted key should remain on the blacklist.  Notwithstanding this setting, the blacklist is cleared when a node is restarted.  (timeunit; default=7d)
+security.xml.xenc.blacklist.maxAge.clusterProperty = security.xml.xenc.blacklist.maxAge
+security.xml.xenc.blacklist.maxAge.systemProperty = com.l7tech.security.xml.xenc.decryptionKeyBlacklist.maxAge
+security.xml.xenc.blacklist.maxAge.default = 7d
+security.xml.xenc.blacklist.maxAge.validation.type = timeUnit
 
 wsdmNotificationEnabled.description = Enable WSDM subscription notifications (true/false)
 wsdmNotificationEnabled.default = true
