SSG-5201: Fix for Request Responce Size Limit: "io.jmsMessageMaxBytes" cluster property doesn’t stop greater Inbound response
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@29807 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
+++ b/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
@@ -611,6 +611,7 @@ ioJmsMessageMaxBytes.default = 2621440
 ioJmsMessageMaxBytes.systemProperty = ${propertyPrefix}.jmsMessageMaxBytes
 ioJmsMessageMaxBytes.clusterProperty = io.jmsMessageMaxBytes
 ioJmsMessageMaxBytes.validation.type = long
+ioJmsMessageMaxBytes.validation.min = 0
 
 ioEmailMessageMaxBytes.description = Maximum number of bytes permitted for an email message, or 0 for unlimited (Integer)
 ioEmailMessageMaxBytes.default = 2621440
