--- a/modules/gateway/console/src/main/resources/com/l7tech/console/panels/resources/ResolveJdbcConnectionPanel.properties
+++ b/modules/gateway/console/src/main/resources/com/l7tech/console/panels/resources/ResolveJdbcConnectionPanel.properties
@@ -15,3 +15,5 @@ action.remove=Remove assertions that refer to the missing JDBC Connection
 label.name=Name
 label.driver-class=Driver Class
 label.jdbc-url=JDBC URL
+errors.saveFailed.title=Save Failed
+errors.saveFailed.message=Failed to save JDBC connection:
