SSG-5079: Fix for SSH transport should enforce resource limits
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@29817 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/assertions/SshAssertion/src/main/resources/com/l7tech/external/assertions/ssh/console/SshTransportAssertionPropertiesPanel.properties
+++ b/modules/gateway/assertions/SshAssertion/src/main/resources/com/l7tech/external/assertions/ssh/console/SshTransportAssertionPropertiesPanel.properties
@@ -5,3 +5,4 @@ enableLabel=Enable:
 hostPrivateKeyLabel=Host private key:
 setHostPrivateKeyLabel=Manage Stored Passwords
 idleTimeoutInMinsLabel=Idle timeout (in minutes):
+maxConcurrentSessionLabel=Max. concurrent session(s):
