--- a/modules/gateway/server/src/main/resources/com/l7tech/server/resources/logging.properties
+++ b/modules/gateway/server/src/main/resources/com/l7tech/server/resources/logging.properties
@@ -34,6 +34,9 @@ com.l7tech.level = CONFIG
 # invocation
 # com.l7tech.logging.appendservicename = true
 
+# Turn off INFO for verbose "internal" components
+com.l7tech.external.assertions.ssh.server.SshServerModule$GatewaySshChannelSession.level = WARNING
+
 # Turn off WARNING for expected/accepted behaviours
 com.mchange.level = SEVERE
 MySQL.level = SEVERE
