SSM-3487: Fixed by making all buttons be visible in Signing Certificate Properties, even though Subject DN field has a extreme long text.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@29873 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/console/src/main/resources/com/l7tech/console/panels/SigningCertificatePropertiesDialog.properties
+++ b/modules/gateway/console/src/main/resources/com/l7tech/console/panels/SigningCertificatePropertiesDialog.properties
@@ -3,9 +3,9 @@ error.dialog.title=Error Signing Certificate
 warning.dialog.title=Signing Certificate Warning
 public.key.details.dialog.title=Public Key Details
 
-label.subject.dn=&Subject DN:
-label.expiry.age=&Expiry Age:
-label.hash.alg=&Hash Algorithm:
+label.subject.dn=Subject DN:
+label.expiry.age=Expiry Age:
+label.hash.alg=Hash Algorithm:
 label.days=days
 label.use.system.default=Use System &Default
 label.public.key=Public Key:
