Updates to the Authentication methods wizard to allow configuration of LDAP(s) and Radius+LDAP modes.
this wizard only collects what is needed by the OS level script that actually makes the changes.

Advanced options are not currently implemented nor is any checking for existance of files that are input or sanity of results.

git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@29910 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/etc/appliance/authconfig/radius_ldap_setup.conf
+++ b/etc/appliance/authconfig/radius_ldap_setup.conf
@@ -183,7 +183,7 @@ LDAP_TLS_CRLCHECK="none"
 CLT_TLS_AUTH="no"
 
 # LDAP_TLS_CERT variable specifies the file representing the client certificate
-# fir mutual authentication if CLT_TLS_AUTH is set to "yes"
+# for mutual authentication if CLT_TLS_AUTH is set to "yes"
 # It is relevant only if CLT_TLS_AUTH is set to "yes".
 # It can be uploaded to the system via scp and it is recommended to be placed in
 # the home directory of ssgconfig user
@@ -197,7 +197,7 @@ LDAP_TLS_CERT=""
 # It can be uploaded to the system via scp and it is recommended to be placed in
 # the home directory of ssgconfig user
 # Default: <empty>
-LDAP_TLS_KEY=""
+LDAP_TLS_KEYLDAP_TLS_KEY=""
 
 # ADVANCED_TLS_CONF variable is used to enable some andvanced checks to be done by the client on
 # server's certificate in TLS handshake. It can be "yes" or "no".
@@ -207,7 +207,7 @@ LDAP_TLS_KEY=""
 # Default: no
 ADVANCED_TLS_CONF="no"
 
-### If AVANCED_TLS_CONF above was set to "yes":
+### If ADVANCED_TLS_CONF above was set to "yes":
 
 # The acceptable cipher suite and preference order; Should be a cipher specification supported by the
 # local OpenSSL; (cipher-list values supported by the local OpenSSL: "openssl ciphers -v ALL")
