bug 10284: Introduced new cluster property "ldap.referral" that can be used to configure how the Gateway handles LDAP referrals.  Possible values are "follow" or "ignore".  The default value is "follow" to preserve the behavior of previous Gateway versions on upgrade.
By default the Gateway will now ignore any PartialResultException encountered while iterating an LDAP search result.  This new behavior can be turned off by setting the Gateway system property "com.l7tech.server.ldap.ignorePartialResultException" to "false".


git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@29927 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
+++ b/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
@@ -206,6 +206,16 @@ ldapSimpleUsernamePattern.description = Regular expression that any username mus
 ldapSimpleUsernamePattern.default = ^[\\p{Alnum}\\.\\-\\_]+$
 ldapSimpleUsernamePattern.clusterProperty = ldap.simple.username.pattern
 
+ldapReferral.description = How LDAP referrals should be handled.  Possible values are "follow" or "ignore". (default=follow)
+ldapReferral.default = follow
+ldapReferral.clusterProperty = ldap.referral
+ldapReferral.validation.regex = follow|ignore|throw
+
+ldapIgnorePartialResultException.description = Whether a PartialResultException should be ignored if encountered while iterating an LDAP search result. (default=true)
+ldapIgnorePartialResultException.systemProperty = ${propertyPrefix}.ldap.ignorePartialResultException
+ldapIgnorePartialResultException.default = true
+ldapIgnorePartialResultException.validation.regex = ${regex.boolean}
+
 # serverconfig name must be same as cluster property name for this property
 trace.policy.guid.description = GUID of internal policy to invoke after each assertion finished, when debug tracing is enabled for a published service (default=empty)
 trace.policy.guid.default =
