SSM-3657: Added minimum values (of 0) for the security.xml.xenc.blacklist.maxFailures and security.xml.xenc.blacklist.capacity cluster properties.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@29930 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
+++ b/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
@@ -1464,12 +1464,14 @@ security.xml.xenc.blacklist.maxFailures.clusterProperty = security.xml.xenc.blac
 security.xml.xenc.blacklist.maxFailures.systemProperty = com.l7tech.security.xml.xenc.decryptionKeyBlacklist.maxFailures
 security.xml.xenc.blacklist.maxFailures.default = 5
 security.xml.xenc.blacklist.maxFailures.validation.type = integer
+security.xml.xenc.blacklist.maxFailures.validation.min = 0
 
 security.xml.xenc.blacklist.capacity.description = Number of entries permitted in the decryption key blacklist (integer; default=50000)
 security.xml.xenc.blacklist.capacity.clusterProperty = security.xml.xenc.blacklist.capacity
 security.xml.xenc.blacklist.capacity.systemProperty = com.l7tech.security.xml.xenc.decryptionKeyBlacklist.capacity
 security.xml.xenc.blacklist.capacity.default = 50000
 security.xml.xenc.blacklist.capacity.validation.type = integer
+security.xml.xenc.blacklist.capacity.validation.min = 0
 
 security.xml.xenc.blacklist.maxAge.description = Minimum time a blacklisted key should remain on the blacklist.  Notwithstanding this setting, the blacklist is cleared when a node is restarted.  (timeunit; default=7d)
 security.xml.xenc.blacklist.maxAge.clusterProperty = security.xml.xenc.blacklist.maxAge
