SSG-5009: fixed by adding new 'Ignore empty values' check box. When checked any empty values found after split are ignored.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@29931 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/assertions/SplitJoinAssertion/src/main/resources/com/l7tech/external/assertions/splitjoin/console/SplitVariablePropertiesDialog.properties
+++ b/modules/gateway/assertions/SplitJoinAssertion/src/main/resources/com/l7tech/external/assertions/splitjoin/console/SplitVariablePropertiesDialog.properties
@@ -2,3 +2,4 @@ sourceVariable=Source Variable:
 targetVariable=Target Variable:
 splitPattern=Split Pattern:
 regExCheckBox=Regular Expression
+ignoreEmpty=Ignore Empty Values
