SSM-3450:  create import certificate action and add import button to the Resolve External Dependencies Wizard
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@29945 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/console/src/main/resources/com/l7tech/console/panels/CertificateImportDialog.properties
+++ b/modules/gateway/console/src/main/resources/com/l7tech/console/panels/CertificateImportDialog.properties
@@ -12,3 +12,13 @@ trustAnchor.tooltip = Import the certificate (or the last certificate in the cha
 certificateChain.label = &Import certificate chain
 certificateChain.tooltip = Import all certificates in the chain
 certificateDetails.title = Certificate Details
+
+## Import
+importing.title = Importing Certificates
+importing.label = Importing certificates, please wait ...
+error.header = The following certificates could not be imported.
+error.duplicates = Certificates already present in trust store:
+error.failures = Certificate import failed:
+error.failures.title=Certificate Import Failures
+error.display="Error processing certificate for display '{0}'.
+cert.error =Certificate Error
