SSG-5089: SFTP polling listener configuration is now stored in the new SsgActiveConnector entity. The SFTP polling listener implementation is refactored to use a new ActiveTransportModule that can be reused for other "polling" (or otherwise active) connectors.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@29947 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/common/src/main/resources/com/l7tech/EntityTypes.properties
+++ b/modules/gateway/common/src/main/resources/com/l7tech/EntityTypes.properties
@@ -18,6 +18,7 @@ AUDIT_MESSAGE=com.l7tech.gateway.common.audit.MessageSummaryAuditRecord
 AUDIT_ADMIN=com.l7tech.gateway.common.audit.AdminAuditRecord
 AUDIT_SYSTEM=com.l7tech.gateway.common.audit.SystemAuditRecord
 AUDIT_RECORD=com.l7tech.gateway.common.audit.AuditRecord
+SSG_ACTIVE_CONNECTOR=com.l7tech.gateway.common.transport.SsgActiveConnector
 SSG_CONNECTOR=com.l7tech.gateway.common.transport.SsgConnector
 EMAIL_LISTENER=com.l7tech.gateway.common.transport.email.EmailListener
 LOG_SINK=com.l7tech.gateway.common.log.SinkConfiguration
