SSG-5255: Fix for Message processing errors with invalid GZIP encodings
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@29955 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
+++ b/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
@@ -1394,6 +1394,18 @@ request.compress.gzip.allow.default=true
 request.compress.gzip.allow.clusterProperty=request.compress.gzip.allow
 request.compress.gzip.allow.validation.regex = ${regex.boolean}
 
+request.compress.gzip.soapFaultRejection.description = When a GZIP compressed request is rejected, should a SOAP Fault response be sent (true/false)
+request.compress.gzip.soapFaultRejection.default = true
+request.compress.gzip.soapFaultRejection.clusterProperty = request.compress.gzip.soapFaultRejection
+request.compress.gzip.soapFaultRejection.validation.regex = ${regex.boolean}
+request.compress.gzip.soapFaultRejection.visible = false
+
+response.compress.gzip.allow.description = Allow GZIP compressed responses (true/false)
+response.compress.gzip.allow.default = true
+response.compress.gzip.allow.clusterProperty = response.compress.gzip.allow
+response.compress.gzip.allow.validation.regex = ${regex.boolean}
+response.compress.gzip.allow.visible = false
+
 timestampCreatedFutureGrace.description = To accommodate clock skew, WSS timestamp created dates are permitted to be up to this far in the future (milliseconds).
 timestampCreatedFutureGrace.default = 60000
 timestampCreatedFutureGrace.systemProperty = ${propertyPrefix}.policy.assertion.xmlsec.ServerRequestWssTimestamp.createdFutureGrace
