SSG-5270: SSH transport, turn off Apache SSHD ServerSession warning stack trace, which logs when forcefully terminating a connected SFTP client
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@29980 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/server/src/main/resources/com/l7tech/server/resources/logging.properties
+++ b/modules/gateway/server/src/main/resources/com/l7tech/server/resources/logging.properties
@@ -49,6 +49,7 @@ org.apache.catalina.startup.DigesterFactory.level = SEVERE
 org.hibernate.validator.util.Version.level = SEVERE
 eu.vahlas.json.schema.level = SEVERE
 org.apache.commons.httpclient.HttpMethodDirector.level = OFF
+org.apache.sshd.server.session.ServerSession.level = SEVERE
 
 # Turn off traffic logging for regular log files
 com.l7tech.traffic.useParentHandlers = false
