SSM-3670: Renamed UUID amount to quantity to be consistent with what is displayed by the dialog to the user.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@29983 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
+++ b/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
@@ -321,7 +321,7 @@ auditBatchExternal.systemProperty = ${propertyPrefix}.audit.batchExternal
 auditBatchExternal.clusterProperty = audit.batchExternal
 auditBatchExternal.validation.regex = ${regex.boolean}
 
-audit.originalMainPart.enable.description = Enable saving the original document for requests and responses.  This enables use of the .originalMainPart suffix for Message variables.  Note: Enabling this option reduces performance and may double the amount of memory used during message processing.  Consider reducing the maximum concurrency to compensate. (true/false; default = false)
+audit.originalMainPart.enable.description = Enable saving the original document for requests and responses.  This enables use of the .originalMainPart suffix for Message variables.  Note: Enabling this option reduces performance and may double the quantity of memory used during message processing.  Consider reducing the maximum concurrency to compensate. (true/false; default = false)
 audit.originalMainPart.enable.default = false
 audit.originalMainPart.enable.systemProperty = com.l7tech.message.enableOriginalDocument
 audit.originalMainPart.enable.clusterProperty = audit.originalMainPart.enable
@@ -1735,8 +1735,8 @@ gateway.3scale.reportingServer.description = The 3 scale reporting server
 gateway.3scale.reportingServer.default = http://su1.3scale.net
 gateway.3scale.reportingServer.clusterProperty = gateway.3scale.reportingServer
 
-uuid.amount.max.description = The maximum allowable amount of UUIDs that a Generate UUID assertion can create.
-uuid.amount.max.default = 100
-uuid.amount.max.clusterProperty = uuid.amount.max
-uuid.amount.max.validation.type = integer
-uuid.amount.max.validation.min = 1
+uuid.quantity.max.description = The maximum allowable quantity of UUIDs that a Generate UUID assertion can create.
+uuid.quantity.max.default = 100
+uuid.quantity.max.clusterProperty = uuid.quantity.max
+uuid.quantity.max.validation.type = integer
+uuid.quantity.max.validation.min = 1
