ug FR-366: updated previous fix by making the new 'Issuer' step more consistent with the 'Name Identifier' step. Replaced usages of <auto> with 'Default' and 'From Template' radio buttons. Refactored some property names to more closely match the attributes they represent.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@29989 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/console/src/main/resources/com/l7tech/console/panels/saml/resources/IssuerWizardStepPanel.properties
+++ b/modules/gateway/console/src/main/resources/com/l7tech/console/panels/saml/resources/IssuerWizardStepPanel.properties
@@ -1,10 +1,13 @@
-customizeIssuer=Customize Issuer
+issuerStepTitle=Issuer
+issuerPanel=Issuer Value
 formatPanel=Format
 nameQualifier=Name Qualifier:
-issuerValue=Issuer:
 entityIdentifier=Entity Identifier
 unspecified=Unspecified
 Email\ Address=Email Address
 x509SubjectName=X.509 Subject Name
 windowsDomainQualifiedName=Windows Domain Qualified Name
 kerberosPrincipalName=Kerberos Principal Name
+includeFormatAttribute=Include Format Attribute
+issuerDefault=Default
+fromTemplate=From Template:
