Add thread pools for use with SSH2 and update to use dependency injection.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@30020 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
+++ b/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
@@ -1242,6 +1242,22 @@ emailListenerThreadLimit.clusterProperty=email.listenerThreadLimit
 emailListenerThreadLimit.validation.type = integer
 emailListenerThreadLimit.validation.min = 5
 
+sftpMessageProcessingThreadLimit.description=The global limit on the number of processing threads for SFTP requests (integer)
+sftpMessageProcessingThreadLimit.default=20
+sftpMessageProcessingThreadLimit.clusterProperty=sftp.messageProcessingThreadLimit
+sftpMessageProcessingThreadLimit.validation.type = integer
+sftpMessageProcessingThreadLimit.validation.min = 1
+sftpMessageProcessingThreadLimit.validation.max = 1000
+sftpMessageProcessingThreadLimit.visible = false
+
+sshResponseDownloadThreadLimit.description=The global limit on the number of response download threads for SSH2 routing (integer)
+sshResponseDownloadThreadLimit.default=20
+sshResponseDownloadThreadLimit.clusterProperty=ssh.responseDownloadThreadLimit
+sshResponseDownloadThreadLimit.validation.type = integer
+sshResponseDownloadThreadLimit.validation.min = 1
+sshResponseDownloadThreadLimit.validation.max = 1000
+sshResponseDownloadThreadLimit.visible = false
+
 customerMapping.addToGatewayAuditEvents.description=Add customer mapping information into the gateway audit, so the user can view the information in Gateway Audit Events window. (true/false)
 customerMapping.addToGatewayAuditEvents.default=true
 customerMapping.addToGatewayAuditEvents.clusterProperty=customerMapping.addToGatewayAuditEvents
